# mini-shell

./: .gitignore  LICENSE  README.md  SECURITY.md  command_handler.py  main.py  main2.py  pyproject.toml  requirements.txt  security.py
docs/: SECURITY_ANALYSIS.md
test/: example.py  test_shell.py
